# motophosaic

./: README.md  settings.gradle.kts  text.txt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: input.pgm
app/src/main/assets/img_tile/: 1.pgm  10.pgm  100.pgm  1000 2.pgm  101.pgm  102.pgm  103.pgm  104.pgm  105.pgm  106.pgm  107.pgm  108.pgm  109.pgm  11.pgm  110.pgm  111.pgm  112.pgm  113.pgm  114.pgm  115.pgm  116.pgm  117.pgm  118.pgm  119.pgm  12.pgm  120.pgm  121.pgm  122.pgm  123.pgm  124.pgm  125.pgm  126.pgm  127.pgm  128.pgm  129.pgm  13.pgm  130.pgm  131.pgm  132.pgm  133.pgm  (+959 more)
app/src/main/assets/img_tile_color/: i1.ppm  i10.ppm  i100 2.ppm  i1000.ppm  i101.ppm  i102 2.ppm  i103.ppm  i104.ppm  i105.ppm  i106.ppm  i107 2.ppm  i108.ppm  i109 2.ppm  i11 2.ppm  i110.ppm  i111 2.ppm  i112.ppm  i113.ppm  i114.ppm  i115.ppm  i116.ppm  i117.ppm  i118.ppm  i119 2.ppm  i12.ppm  i120.ppm  i121.ppm  i122.ppm  i123 2.ppm  i124 2.ppm  i125 2.ppm  i126.ppm  i127.ppm  i128.ppm  i129.ppm  i13.ppm  i130.ppm  i131.ppm  i132.ppm  i133.ppm  (+960 more)
app/src/main/cpp/: CMakeLists.txt  distribution.cpp  distribution_cou.cpp  histo.cpp  histo_cou.cpp  image_ppm.h  moyen.cpp  moyen_cheat.cpp  moyen_cou.cpp  moyen_cou_cheat.cpp  native-lib.cpp  photomosaic-lib.cpp
app/src/main/res/color/: btn_cou_ave_color.xml  btn_cou_dis_color.xml  btn_cou_his_color.xml  btn_grey.xml  btn_text_color.xml
app/src/main/res/drawable/: bg_btn_selected.xml  bg_btn_unselected.xml  bg_circle_grey.xml  (+3 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+37 files in other folders)
